# WindowsHardwareMonitor

./: CMakeLists.txt  LICENSE  README.md
includes/: HardwareMonitor.hpp  Logger.hpp  WMIHandler.hpp
src/: HardwareMonitor.cpp  Logger.cpp  WMIHandler.cpp  main.cpp
